# dana

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  pkgtree.sh  publish.sh
.github/workflows/: rust.yml
benches/: qty_basic.rs  qty_capacitor.rs  qty_complex.rs  qty_simd.rs
conv_macros/: Cargo.toml
conv_macros/src/: lib.rs  macro_qty.rs  macro_reorg.rs  macro_scale.rs  unit_def.rs
dana_macros/: Cargo.toml
dana_macros/src/: debug.rs  lib.rs  macro_dim.rs  macro_qty.rs  macro_qtype.rs  unit_spec.rs  util.rs
dim_macros/: Cargo.toml
dim_macros/src/: debug.rs  lib.rs  macro_dim.rs  macro_qty.rs  macro_qtype.rs  macro_reorg.rs  macro_scale.rs  unit_def.rs  unit_spec.rs  util.rs
src/: constants.rs  dimension.rs  equations.rs  error.rs  lib.rs  macros.rs  prelude.rs  quantity.rs  scalar.rs  simd.rs  symbols.rs  units.rs  value.rs
src/quantity/: conversions.rs  rand.rs
src/quantity/conversions/: time_chrono.rs
src/quantity/qty_from/: time_chrono.rs  time_std.rs
src/symbols/: macros.rs
src/units/: _experimental.rs  compound.rs  concrete.rs  conversions.rs  dim.rs  prefix.rs  si.rs  symbols.rs  traits.rs  transform.rs  unit_anon.rs  unit_prefixed.rs  unit_rescale.rs
src/units/compound/: per_unit.rs  serde.rs  unit_div.rs  unit_inv.rs  unit_mul.rs  unit_pow.rs  unit_pow_2.rs  unit_pow_3.rs  unit_pow_n.rs  unit_pow_n_const.rs  unit_pow_n_const_2.rs
src/units/compound/unit_pow/: exp.rs
src/units/compound/unit_pow_n_const_2/: exp.rs
src/units/concrete/: amount.rs  charge.rs  current.rs  distance.rs  energy.rs  force.rs  frequency.rs  intensity.rs  length.rs  mass.rs  one.rs  power.rs  pressure.rs  resistance.rs  temp.rs  time.rs  voltage.rs  volume.rs
src/units/traits/: associative.rs  commutative.rs  conversion.rs  exponential.rs  step.rs  transform.rs  unit_binary.rs  unit_unary.rs
src/units/transform/: convert.rs  simplify.rs
tests/: conversion.rs  dim.rs  main.rs  proc_macros.rs  rand.rs  serde.rs
tests/err_qty/: exp_empty.rs  exp_empty.stderr  exp_frac_one_div.rs  exp_frac_one_div.stderr  exp_frac_one_div_zero.rs  exp_frac_one_div_zero.stderr  exp_frac_one_div_zero_hex.rs  exp_frac_one_div_zero_hex.stderr  exp_frac_one_div_zeroes.rs  exp_frac_one_div_zeroes.stderr  exp_frac_zero_div.rs  exp_frac_zero_div.stderr  exp_frac_zero_div_one.rs  exp_frac_zero_div_one.stderr  exp_frac_zero_div_zero.rs  exp_frac_zero_div_zero.stderr  exp_frac_zero_hex_div_one.rs  exp_frac_zero_hex_div_one.stderr  exp_frac_zeroes_div_one.rs  exp_frac_zeroes_div_one.stderr  exp_paren_div.rs  exp_paren_div.stderr  exp_paren_empty.rs  exp_paren_empty.stderr  exp_paren_one_mul_one.rs  exp_paren_one_mul_one.stderr  exp_paren_zero.rs  exp_paren_zero.stderr  exp_zero.rs  exp_zero.stderr  mixed_sum.rs  mixed_sum.stderr  recursive_deref.rs  recursive_deref.stderr  trailing_add.rs  trailing_add.stderr  trailing_div.rs  trailing_div.stderr  trailing_float.rs  trailing_float.stderr  (+5 more)
