[workspace]
members = ["dana_macros"]
default-members = ["dana_macros", "."]

[workspace.package]
description = "Compile-time dimensional analysis via generic types."
version = "0.3.1"

authors = ["J.S. Dreim <jsdreim@protonmail.com>"]
repository = "https://github.com/jsdreim/dana"
documentation = "https://docs.rs/dana"
readme = "README.md"

include = [
    "CHANGELOG.md", "LICENSE",
    "/src/**/*.rs",
    "/tests/**/*.rs", "/tests/**/*.stderr",
    "/benches/**/*.rs",

    "!/**/_*.rs",
    "!/.idea/**", "!/.vscode/**",
]
categories = ["development-tools", "mathematics", "science", "no-std"]
keywords = ["dimensional-analysis", "quantities", "units", "library", "no_std"]

edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
num-traits = "0.2.19"

[workspace.dependencies.dana_macros]
# NOTE: Keep dependency version in sync with workspace version.
# TODO: Can this be picked automatically?
version = "=0.3.1"
path = "dana_macros"


[package]
name = "dana"
description.workspace = true
version.workspace = true

authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

include.workspace = true
categories.workspace = true
keywords.workspace = true

edition.workspace = true
license.workspace = true


[dependencies]
dana_macros.workspace = true
num-traits.workspace = true
thiserror-no-std = "2.0.2"
typenum = "1.17.0"

[dependencies.chrono]
version = "0.4.38"
optional = true

[dependencies.rand]
version = "0.8.5"
optional = true

[dependencies.serde]
version = "1.0.203"
features = ["derive"]
optional = true


[dev-dependencies]
serde_json = "1.0.117"
trybuild = "1.0.96"

[dev-dependencies.criterion]
version = "0.5.1"
features = ["csv_output", "html_reports"]


[lib]
bench = false

[[bench]]
name = "qty_basic"
harness = false

[[bench]]
name = "qty_capacitor"
harness = false

[[bench]]
name = "qty_simd"
harness = false
required-features = ["rand", "simd"]


[features]
default = []

# Features that can be enabled on the stable toolchain:
stable = ["chrono", "rand", "serde"]
chrono = ["dep:chrono"]
rand = ["dep:rand"]
serde = ["dep:serde"]

# Features that require unstable functionality:
unstable = ["simd"]
simd = []
