[package]
name = "dana_macros"
description = "Procedural macro crate for `dana`."
version.workspace = true

authors.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true

exclude.workspace = true
categories.workspace = true
keywords.workspace = true

edition.workspace = true
license.workspace = true


[lib]
proc-macro = true


[dependencies]
num-traits.workspace = true
quote = "1.0.36"
syn = "2.0.66"

[dependencies.proc-macro2]
version = "1.0.85"
features = ["span-locations"]
